crates/keron-lang/tests/corpus/errors/parse/for_missing_in.keron
val xs: List<Int> = [1, 2]
for x { reconcile x }
